{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 10,
  "lineage": "a02a006c-a57d-2ac5-21bb-dbaf192405de",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000-4000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-13T12:06:18.838-07:00",
            "deny": [],
            "description": "Allow TCP 3000-4000 for dev/app servers on ubuntu-vm",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-app-ports",
            "log_config": [],
            "name": "ubuntu-vm-allow-app-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/networks/gke-vpc",
            "priority": 1000,
            "project": "project-065701e7-213d-458b-a83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-app-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-03-13T11:53:25.730-07:00",
            "deny": [],
            "description": "Allow ICMP ping to ubuntu-vm",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-icmp",
            "log_config": [],
            "name": "ubuntu-vm-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/networks/gke-vpc",
            "priority": 1000,
            "project": "project-065701e7-213d-458b-a83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k3s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-13T12:36:23.266-07:00",
            "deny": [],
            "description": "Allow k3s API server port 6443",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-k3s-api",
            "log_config": [],
            "name": "ubuntu-vm-allow-k3s-api",
            "network": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/networks/gke-vpc",
            "priority": 1000,
            "project": "project-065701e7-213d-458b-a83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-k3s-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k3s_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-13T12:36:23.261-07:00",
            "deny": [],
            "description": "Allow k3s NodePort range 30000-32767",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-k3s-nodeport",
            "log_config": [],
            "name": "ubuntu-vm-allow-k3s-nodeport",
            "network": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/networks/gke-vpc",
            "priority": 1000,
            "project": "project-065701e7-213d-458b-a83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-k3s-nodeport",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-13T11:53:25.814-07:00",
            "deny": [],
            "description": "Allow SSH access to ubuntu-vm",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-ssh",
            "log_config": [],
            "name": "ubuntu-vm-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/networks/gke-vpc",
            "priority": 1000,
            "project": "project-065701e7-213d-458b-a83",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/firewalls/ubuntu-vm-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/zones/asia-southeast2-a/disks/ubuntu-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Ubuntu 22.04 LTS VM — Jakarta",
            "effective_labels": {
              "environment": "dev",
              "managed-by": "terraform",
              "region": "jakarta"
            },
            "enable_display": false,
            "id": "projects/project-065701e7-213d-458b-a83/zones/asia-southeast2-a/instances/ubuntu-vm",
            "instance_id": "6052256853312267209",
            "label_fingerprint": "hOWdib-z5R0=",
            "labels": {
              "environment": "dev",
              "managed-by": "terraform",
              "region": "jakarta"
            },
            "machine_type": "e2-small",
            "metadata": {
              "enable-osconfig": "true",
              "serial-port-enable": "false",
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCwyDUIlyvDeyJJCU5NlhEtcsVP7AauLOGXJeMcaXS2ZEuR+x/xRcWGNK+M4F66BjvD5uiUM96PfmsyOPX2bXhJjcYE7mgog8KZtmMp7Ovzt03aFpfjQRTBsnQPfw4ZOkOqOpr2ewLM9Ph9r674LckDBBqf9ce9+nSQRcN7pk5OjCDuK2JyWEw2ARgdPpvE3Eh4gJSlryr9BhilY4TAPx3w2rAIA5+D2qfSgAoM1Tntfw3XS2nqZJk9Wn7rksFxK9l1fbf8SpHpbvuXZXsv88leBMRvisQKw0EXZW5qra89i3j/Ip+VTXbc0i4CfVS972bs7Yd8Pn0ZBk/1oNbjsKYL jenkins@devjenkins01.loyalto.id\r\n"
            },
            "metadata_fingerprint": "JdNudTY11z4=",
            "metadata_startup_script": "#!/bin/bash\nset -e\napt-get update -qq\napt-get install -y -qq curl wget git vim htop net-tools\necho \"✅ VM setup complete: $(hostname) at $(date)\" \u003e\u003e /var/log/startup.log\n",
            "name": "ubuntu-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.219.24.139",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/global/networks/gke-vpc",
                "network_ip": "10.0.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/regions/asia-southeast2/subnetworks/gke-subnet",
                "subnetwork_project": "project-065701e7-213d-458b-a83"
              }
            ],
            "project": "project-065701e7-213d-458b-a83",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-065701e7-213d-458b-a83/zones/asia-southeast2-a/instances/ubuntu-vm",
            "service_account": [
              {
                "email": "769195710608-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-access"
            ],
            "tags_fingerprint": "UN_d4GsYhqM=",
            "terraform_labels": {
              "environment": "dev",
              "managed-by": "terraform",
              "region": "jakarta"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu"
          ]
        }
      ]
    }
  ]
}